afool page first commit two

--- a/afool.github.com/_layouts/default.html
+++ b/afool.github.com/_layouts/default.html
@@ -6,13 +6,13 @@
 </head>
 
 <body>
-  <div class="header">Header here</div>
-
+  <div class="header">Updating..</div>
+    This page soon be better.
   <div class="content">
     {{ content }}
   </div>
 
-  <div class="footer">Footer here</div>
+  <div class="footer">AFOOL</div>
 </body>
 
 </html>
