First commit for Blog

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -47,8 +47,7 @@
 
       <footer>
         <p>&copy; {{ site.author.name }} 2012 
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-          and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
+          with help from <a href="http://swmaestro.kr" target="_blank" title="SW Meastro">SW Meastro</a> in Korea
         </p>
       </footer>
 
